# workflows-bioimage-io-python

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml  test-env.yaml  test.yml
bioimageio/workflows/: __init__.py  __main__.py
bioimageio/workflows/envs/: __init__.py
bioimageio/workflows/envs/default/: __init__.py  _demo.py  _inference.py
bioimageio/workflows/envs/stardist/: _inference.py  local.py  remote.py
bioimageio/workflows/operators/: _run.py
bioimageio/workflows/server/: __init__.py  _submodule_service.py
conda-recipe/: meta.yaml
dev/: env_default.yaml  env_stardist_tf1.yaml  env_startidst.yaml
scripts/: example.py  generate_workflow_rdfs.py
src/bioimageio/workflows/: __init__.py  __main__.py  _v.py
src/bioimageio/workflows/envs/: __init__.py
src/bioimageio/workflows/envs/default/: _demo.py  _inference.py  local.py
src/bioimageio/workflows/envs/stardist/: _inference.py  remote.py
src/bioimageio/workflows/operators/: __init__.py
src/bioimageio/workflows/server/: __init__.py  __main__.py  _client.py  _services.py  _submodule_service.py  _utils.py  env_vars.py
src/bioimageio/workflows/static/envs/: default.yaml  stardist.yaml  stardist_tf1.yaml
src/bioimageio/workflows/static/workflow_rdfs/: hello.yaml  (+4 more)
src/bioimageio/workflows/utils/: __init__.py
tests/: conftest.py  test_src_structure.py
tests/test_default/: test_demo.py  test_inference.py
tests/test_stardist/: __init__.py  stardist_chatty_frog_labels.npy  test_inference.py  test_stardist.py
